src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Valid/WithMigrations/ValidWithMigrations.php
<?php
namespace Valid\WithMigrations;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class ValidWithMigrations extends ClarolineExtension
{
    
}